syntax = "proto3";

package renders;

import "geometry/geometry.proto";

service Renders {
    rpc DoRender (RenderRequest) returns (RenderResponse) {}
}

message RenderRequest {
    string operator_key = 1;
    float time = 2;
    geometry.BoundingBox2D bounding_box = 3;
}

message RenderResponse {
    string resource_id = 1;
}
